isol-deployments-k8/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: isol
spec:
  replicas: 3  # Number of replicas for redundancy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0  # Ensures that at least all pods are available during the update
      maxSurge: 1        # Allows one extra pod to be created during the update
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 8080
          protocol: TCP
